# grabmymemos

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/grabmymemos/: __init__.py  __main__.py  config.py
