[project]
name = "grabmymemos"
version = "0.1.0"
description = "A minimal Python wrapper for the Memos API, providing simple read-only access to your notes."
authors = [
    {name = "Francesco Maida",email = "francesco.maida@gmail.com"}
]
readme = "README.md"
license = "Free for personal use, license required for commercial use"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.33.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "grabmymemos", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
